--- a/app/src/main/res/layout/fragment_input_data.xml
+++ b/app/src/main/res/layout/fragment_input_data.xml
@@ -223,12 +223,24 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layoutKeteranganAcara" />
 
+            <TextView
+                android:id="@+id/tvInfoSurat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*Surat izin sudah ditandatangani oleh Kemahasiswaan"
+                android:textColor="@color/Color6"
+                android:textSize="12sp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/btnSuratIzin"
+                app:layout_constraintTop_toBottomOf="@+id/tvSuratIzinLabel"
+                tools:layout_editor_absoluteX="58dp" />
+
             <ImageButton
                 android:id="@+id/btnSuratIzin"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="-4dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="16dp"
                 android:backgroundTint="#00000000"
                 android:padding="0dp"
                 android:scaleType="fitCenter"
@@ -260,6 +272,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/btnKonfirmasi"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
