--- a/app/src/main/res/layout/custom_list_arsip.xml
+++ b/app/src/main/res/layout/custom_list_arsip.xml
@@ -47,6 +47,14 @@
         android:textSize="12sp"
         android:layout_below="@id/tvTanggal" />
 
-
+    <TextView
+        android:id="@+id/tvWaktuPeminjaman"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Waktu Peminjaman"
+        android:textSize="12sp" />
 
 </RelativeLayout>
