Tugas Akhir Bella

--- a/app/src/main/res/layout/fragment_detail_menu.xml
+++ b/app/src/main/res/layout/fragment_detail_menu.xml
@@ -33,7 +33,8 @@
                     android:src="@drawable/arrow_left"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="TouchTargetSizeCheck" />
 
                 <TextView
                     android:id="@+id/tvGedung"
