--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -146,6 +146,14 @@
                     android:layout_height="match_parent"
                     android:textColor="@color/black" />
 
+                <TextView
+                    android:id="@+id/exampleTipeCivitas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contoh: Mahasiswa, Dosen, Staff Akademik"
+                    android:textSize="10sp"
+                    android:layout_marginTop="4dp"/>
+
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
