--- a/app/src/main/res/layout/fragment_notif.xml
+++ b/app/src/main/res/layout/fragment_notif.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".view.notif.NotifFragment">
 
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -57,10 +56,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvNotif"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        tools:layout_editor_absoluteX="42dp"
         tools:listitem="@layout/custom_list_notifikasi" />
 
     <TextView
